<resources>
    <string name="app_name">CryptoViewerApp</string>
    <string name="crypto_list_text">Список криптовалют</string>
    <string name="usd_txt">USD</string>
    <string name="rub_txt">RUB</string>
    <string name="icon_with_cryptocurrency">Иконка со значком криптовалюты</string>
    <string name="try_text">попробовать</string>
    <string name="some_error_text">Произошла какая-то ошибка :(</string>
    <string name="some_error_second_text">Попробуем снова?</string>
    <string name="description_text">Описание</string>
    <string name="tool_category_text">Smart Contract Platform, Ethereum Ecosystems</string>
    <string name="category_text">Категории</string>
    <string name="Icon_with_back_button">Кнопка возвращения назад</string>
    <string name="tool_description_large_text">
    Bitcoin is a decentralized cryptocurrency originally described in a 2008 whitepaper by a person, or group of people, using the alias Satoshi Nakamoto. It was launched soon after, in January 2009.\n\n
    Bitcoin is a peer-to-peer online currency, meaning that all transactions happen directly between equal, independent network participants, without the need for any intermediary to permit or facilitate them. Bitcoin was created, according to Nakamoto’s own words, to allow “online payments to be sent directly from one party to another without going through a financial institution.”\n\n
    Bitcoin is a peer-to-peer online currency, meaning that all transactions happen directly between equal, independent network participants, without the need for any intermediary to permit or facilitate them. Bitcoin was created, according to Nakamoto’s own words, to allow “online payments to be sent directly from one party to another without going through a financial institution.”
    </string>
</resources>