<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.cryptoDetails.CryptoDetailsFragment">

    <android.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/description_toolbar_height"
        android:background="@color/white"
        android:elevation="@dimen/elevation_size"
        app:contentInsetStart="@dimen/main_indent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/main_indent"
            android:layout_marginStart="@dimen/main_indent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Icon_with_back_button"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tvDetailsToolbarTitle"
            style="@style/ToolBarTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/description_toolbar_text_indent"
            tools:text="Bitcoin" />

    </android.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_toolbar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/descriptionView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/details_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivDetailsCryptoImage"
                    android:layout_width="@dimen/description_height_icon_btc"
                    android:layout_height="@dimen/description_height_icon_btc"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_btc_icon"
                    android:contentDescription="@string/icon_with_cryptocurrency"
                    tools:src="@drawable/btc" />

                <TextView
                    style="@style/DescriptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_indent"
                    android:layout_marginTop="@dimen/main_indent"
                    android:text="@string/description_text"
                    android:textSize="@dimen/text_headline_size" />

                <TextView
                    android:id="@+id/tvDetailsDescription"
                    style="@style/DescriptionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_indent"
                    android:layout_marginTop="@dimen/main_half"
                    android:layout_marginEnd="@dimen/main_indent"
                    tools:text="@string/tool_description_large_text" />

                <TextView
                    style="@style/DescriptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_indent"
                    android:layout_marginTop="@dimen/main_indent"
                    android:text="@string/category_text"
                    android:textSize="@dimen/text_headline_size" />

                <TextView
                    android:id="@+id/tvDetailsCategory"
                    style="@style/DescriptionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/category_start_indent"
                    android:layout_marginTop="@dimen/main_half"
                    android:layout_marginEnd="@dimen/category_end_indent"
                    android:layout_marginBottom="@dimen/category_bottom_indent"
                    tools:text="@string/tool_category_text" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_indent"
        android:indeterminateTint="@color/crypto_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_toolbar" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="@dimen/error_layout_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_toolbar">

        <ImageView
            android:layout_width="@dimen/error_image_size"
            android:layout_height="@dimen/error_image_size"
            android:contentDescription="@string/icon_with_cryptocurrency"
            app:srcCompat="@drawable/btc" />

        <TextView
            style="@style/ErrorTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_text_indent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/some_error_text"
            android:visibility="visible" />

        <TextView
            style="@style/ErrorTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/some_error_second_text"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTry"
            android:layout_width="@dimen/try_button_width"
            android:layout_height="@dimen/try_button_height"
            android:layout_marginTop="@dimen/error_button_indent"
            android:background="@drawable/shape_rounded_variants"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0.05"
            android:text="@string/try_text"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>